--- a/DIO-animations-aulas-master/transitions_1/style.css
+++ b/DIO-animations-aulas-master/transitions_1/style.css
@@ -1,32 +1,32 @@
-body{
+body {
     font-family: sans-serif;
 }
 
-.container{
+.container {
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
 
-.card{
+.card {
     height: 400px;
     width: 500px;
-    background-image: url('/fundo.jpg');
+    background-image: url('./landscape.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
-    filter: grayscale(0.8);
+    filter: grayscale(0.5);
     color: white;
     cursor: pointer;
     transition: 0.3s;
 }
 
-.card-wrapper{
+.card-wrapper {
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -35,7 +35,7 @@ body{
     position: relative;
 }
 
-.card-wrapper::before{
+.card-wrapper::before {
     content: '';
     position: absolute;
     height: 100px;
@@ -46,7 +46,7 @@ body{
     transition: 0.3s;
 }
 
-.card-wrapper h2{
+.card-wrapper h2 {
     font-size: 40px;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -54,11 +54,27 @@ body{
     transition: 0.3s;
 }
 
-.card-wrapper p{
+.card-wrapper p {
     font-size: 0;
     visibility: hidden;
     opacity: 0;
     font-weight: bold;
     text-transform: uppercase;
     transition: 0.3s;
+}
+
+.card:hover {
+    filter: unset;
+}
+
+.card:hover > .card-wrapper::before {
+    height: 300px;
+    width: 400px;
+    opacity: 1;
+}
+
+.card:hover > .card-wrapper p {
+    opacity: 1;
+    visibility: visible;
+    font-size: 14px;
 }
