--- a/style.css
+++ b/style.css
@@ -190,14 +190,29 @@ a:hover{
 
 /* CARDS */
 
-.container {
+.silvia {
+    width: 200px;
+    height: auto;
+    margin: 1rem 0 0 0;
+    background-image: url('/github.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container{
     width: 100%;
     height: auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    margin: 3rem 0;
+    margin-left: 2rem 0 0 0;
+    font-family: sans-serif;
+    letter-spacing: 1px;
+    color: rgb(109, 109, 109);
 }
 
 .card-container {
@@ -207,11 +222,25 @@ a:hover{
     width: 90%;
 }
 
+.card-textogit {
+    width: 40%;
+    font-family: sans-serif;
+    letter-spacing: 1px;
+    color: rgb(109, 109, 109);
+}
+
+.card-textolinkedin {
+    width: 40%;
+    font-family: sans-serif;
+    letter-spacing: 1px;
+    color: rgb(109, 109, 109);
+}
+
 .card-a {
-    height: 300px;
-    width: 400px;
-    margin: 3rem 0 0 0;
-    background-image: url('github.png');
+    height: 420px;
+    width: 300px;
+    margin-left: 3rem 0 0 0;
+    background-image: url('/github.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -219,23 +248,28 @@ a:hover{
     justify-content: center;
     align-items: center;
     filter: grayscale(0.5);
-    color: white;
+    color: rgb(253, 253, 254);
     cursor: pointer;
     transition: 0.3s;
 }
 
 .card-b {
-    
+    height: 300px;
+    width: 400px;
+    margin: 3rem 0 0 0;
+    background-image: url('/linkedin.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    filter: grayscale(0.5);
+    color: rgb(14, 32, 114);
+    cursor: pointer;
+    transition: 0.3s;
 }
-
-.card-text {
-    width: 40%;
-    font-family: sans-serif;
-    letter-spacing: 1px;
-    color: rgb(109, 109, 109);
-}
-
-.card-wrapper {
+.card-wrapper{
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -250,13 +284,13 @@ a:hover{
     height: 100px;
     width: 100px;
     display: block;
-    border: 1px solid white;
+    border: 1px solid rgb(5, 32, 87);
     opacity: 0;
     transition: 0.3s;
 }
 
 .card-wrapper h2 {
-    font-size: 40px;
+    font-size: 80px;
     text-transform: uppercase;
     letter-spacing: 4px;
     margin: 0;
@@ -279,11 +313,11 @@ a:hover{
 .card:hover > .card-wrapper::before {
     height: 250px;
     width: 350px;
-    opacity: 1;
+    opacity: 5;
 }
 
 .card:hover > .card-wrapper p {
-    opacity: 1;
+    opacity: 5;
     visibility: visible;
     font-size: 14px;
 }
@@ -325,7 +359,7 @@ a:hover{
 
     .card-text {
         width: 90%;
-        margin-top: 2rem;
+        margin-top: 5rem;
         text-align: center;
     }
 
