--- a/style.css
+++ b/style.css
@@ -190,29 +190,14 @@ a:hover{
 
 /* CARDS */
 
-.silvia {
-    width: 200px;
-    height: auto;
-    margin: 1rem 0 0 0;
-    background-image: url('/github.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .container{
     width: 100%;
     height: auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    margin-left: 2rem 0 0 0;
-    font-family: sans-serif;
-    letter-spacing: 1px;
-    color: rgb(109, 109, 109);
+    margin: 3rem 0;
 }
 
 .card-container {
@@ -221,26 +206,11 @@ a:hover{
     justify-content: space-evenly;
     width: 90%;
 }
-
-.card-textogit {
-    width: 40%;
-    font-family: sans-serif;
-    letter-spacing: 1px;
-    color: rgb(109, 109, 109);
-}
-
-.card-textolinkedin {
-    width: 40%;
-    font-family: sans-serif;
-    letter-spacing: 1px;
-    color: rgb(109, 109, 109);
-}
-
-.card-a {
-    height: 420px;
+.card{
+    height: 250px;
     width: 300px;
-    margin-left: 3rem 0 0 0;
-    background-image: url('/github.png');
+    margin: 1rem 0 0 0;
+    background-image: url('/silvia.jpeg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -248,28 +218,17 @@ a:hover{
     justify-content: center;
     align-items: center;
     filter: grayscale(0.5);
-    color: rgb(253, 253, 254);
+    color: white;
     cursor: pointer;
     transition: 0.3s;
 }
-
-.card-b {
-    height: 300px;
-    width: 400px;
-    margin: 3rem 0 0 0;
-    background-image: url('/linkedin.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    filter: grayscale(0.5);
-    color: rgb(14, 32, 114);
-    cursor: pointer;
-    transition: 0.3s;
+.card-text {
+    width: 40%;
+    font-family: sans-serif;
+    letter-spacing: 1px;
+    color: rgb(109, 109, 109);
 }
-.card-wrapper{
+.card-wrapper {
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -284,13 +243,13 @@ a:hover{
     height: 100px;
     width: 100px;
     display: block;
-    border: 1px solid rgb(5, 32, 87);
+    border: 1px solid white;
     opacity: 0;
     transition: 0.3s;
 }
 
 .card-wrapper h2 {
-    font-size: 80px;
+    font-size: 40px;
     text-transform: uppercase;
     letter-spacing: 4px;
     margin: 0;
@@ -313,11 +272,11 @@ a:hover{
 .card:hover > .card-wrapper::before {
     height: 250px;
     width: 350px;
-    opacity: 5;
+    opacity: 1;
 }
 
 .card:hover > .card-wrapper p {
-    opacity: 5;
+    opacity: 1;
     visibility: visible;
     font-size: 14px;
 }
@@ -327,10 +286,12 @@ a:hover{
 .footer {
     width: 100%;
     height: 100px;
-    background-color: #0d367c;
+    margin: 3rem 0 0 0;
+    background-color: #3656e2;
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 @media (max-width: 800px) {
@@ -359,7 +320,7 @@ a:hover{
 
     .card-text {
         width: 90%;
-        margin-top: 5rem;
+        margin-top: 2rem;
         text-align: center;
     }
 
